// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrevNext should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between mt-4"
  >
    <div />
    <div>
      <a
        class="flex items-center font-semibold justify-between rounded w-80 p-4 transition bg-secondary-700 hover:bg-secondary-800 flex-row-reverse"
        href="/last"
      >
        <div
          class="flex rotate-180 ml-4"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Go to Last"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="flex flex-col space-y-1 items-start"
        >
          <span
            class="text-sm text-secondary-200"
          >
            Next
          </span>
          <span
            class="text-base text-white"
          >
            Last
          </span>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PrevNext should render 2`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between mt-4"
  >
    <div>
      <a
        class="flex items-center font-semibold justify-between rounded w-80 p-4 transition bg-secondary-700 hover:bg-secondary-800 flex-row"
        href="/first"
      >
        <div
          class="flex mr-4"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Go to First"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="flex flex-col space-y-1 items-end"
        >
          <span
            class="text-sm text-secondary-200"
          >
            Prev
          </span>
          <span
            class="text-base text-white"
          >
            First
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        class="flex items-center font-semibold justify-between rounded w-80 p-4 transition bg-secondary-700 hover:bg-secondary-800 flex-row-reverse"
        href="/last"
      >
        <div
          class="flex rotate-180 ml-4"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Go to Last"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="flex flex-col space-y-1 items-start"
        >
          <span
            class="text-sm text-secondary-200"
          >
            Next
          </span>
          <span
            class="text-base text-white"
          >
            Last
          </span>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PrevNext should render 3`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between mt-4"
  >
    <div>
      <a
        class="flex items-center font-semibold justify-between rounded w-80 p-4 transition bg-secondary-700 hover:bg-secondary-800 flex-row"
        href="/first"
      >
        <div
          class="flex mr-4"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Go to First"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="flex flex-col space-y-1 items-end"
        >
          <span
            class="text-sm text-secondary-200"
          >
            Prev
          </span>
          <span
            class="text-base text-white"
          >
            First
          </span>
        </div>
      </a>
    </div>
    <div />
  </div>
</DocumentFragment>
`;
